fix summary layout overflow

--- a/assets/css/custom_components.scss
+++ b/assets/css/custom_components.scss
@@ -242,3 +242,8 @@
   border-radius: 100%;
   opacity: 0.7;
 }
+
+.pill {
+  border-radius: 500dvh;
+  padding: 4px 11px;
+}
